styling screen overflow fixes

--- a/client/styles/createSeed.scss
+++ b/client/styles/createSeed.scss
@@ -13,7 +13,7 @@
   }
   .edit {
     width: 95%;
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 11px 10px;
   }
   .group3 {
     top: 20px;
