--- a/client/styles/menu.scss
+++ b/client/styles/menu.scss
@@ -6,6 +6,7 @@
   width: 100%;
   background-color: #4c4f69;
   z-index: 100;
+  overflow: hidden;
 
   .active-coins {
     font-family: 'AppleSystemUIFont', Helvetica, Arial, serif;
@@ -47,7 +48,7 @@
     min-width: 375px;
     height: 100vh;
     position: relative;
-    overflow: auto;
+    overflow: hidden;
     margin: 0;
   }
 
@@ -180,8 +181,8 @@
 .menu-icon {
   background-color: rgba(255, 255, 255, 0.0);
   top: 18px;
-  height: 15px;
-  width: 21px;
+  height: 14px;
+  width: 20px;
   position: absolute;
   margin: 0;
   right: 14px;
@@ -191,8 +192,8 @@
 .menu-back {
   background-color: rgba(255, 255, 255, 0.0);
   top: 18px;
-  height: 15px;
-  width: 21px;
+  height: 13px;
+  width: 20px;
   position: absolute;
   margin: 0;
   left: 10px;
@@ -206,7 +207,8 @@
   height: 100%;
   position: fixed;
   height: 50px;
-  z-index: 100;
+  z-index: 110;
+  border-top: solid 2px #373a4c;
   box-shadow: 0 1px 0 rgba(0, 0, 0, .2), 0 2px 0 rgba(0, 0, 0, .06);
   background: #45485F;
 
