--- a/client/styles/offsets.scss
+++ b/client/styles/offsets.scss
@@ -266,3 +266,6 @@
 .no-margin-top {
   margin-top: 0 !important;
 }
+.no-padding-top {
+  padding-top: 0 !important;
+}
